--- a/circuit_ansatz/Keras_Pennylane_try1.ipynb
+++ b/circuit_ansatz/Keras_Pennylane_try1.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "remarkable-parish",
+   "id": "working-committee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "historical-mineral",
+   "id": "nuclear-detail",
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +58,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "wired-expression",
+   "id": "hawaiian-throat",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,77 +76,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "reliable-settle",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: pennylane_qiskit in c:\\users\\diptanshu\\anaconda3\\envs\\tf\\lib\\site-packages (0.29.0)\n",
-      "Requirement already satisfied: mthree>=0.17 in c:\\users\\diptanshu\\anaconda3\\envs\\tf\\lib\\site-packages (from pennylane_qiskit) (2.3.0)\n",
-      "Requirement already satisfied: qiskit>=0.32 in c:\\users\\diptanshu\\anaconda3\\envs\\tf\\lib\\site-packages (from pennylane_qiskit) (0.42.1)\n",
-      "Requirement already satisfied: numpy in c:\\users\\diptanshu\\anaconda3\\envs\\tf\\lib\\site-packages (from pennylane_qiskit) (1.19.2)\n",
-      "Requirement already satisfied: pennylane>=0.28 in c:\\users\\diptanshu\\anaconda3\\envs\\tf\\lib\\site-packages (from pennylane_qiskit) (0.29.1)\n",
-      "Requirement already satisfied: networkx>=2.2 in c:\\users\\diptanshu\\anaconda3\\envs\\tf\\lib\\site-packages (from pennylane_qiskit) (2.6.2)\n",
-      "Requirement already satisfied: qiskit-terra>=0.21 in c:\\users\\diptanshu\\anaconda3\\envs\\tf\\lib\\site-packages (from mthree>=0.17->pennylane_qiskit) (0.23.3)\n",
-      "Requirement already satisfied: qiskit-ibmq-provider>=0.19.2 in c:\\users\\diptanshu\\anaconda3\\envs\\tf\\lib\\site-packages (from mthree>=0.17->pennylane_qiskit) (0.20.2)\n",
-      "Requirement already satisfied: psutil in c:\\users\\diptanshu\\anaconda3\\envs\\tf\\lib\\site-packages (from mthree>=0.17->pennylane_qiskit) (5.8.0)\n",
-      "Requirement already satisfied: scipy>=1.3 in c:\\users\\diptanshu\\anaconda3\\envs\\tf\\lib\\site-packages (from mthree>=0.17->pennylane_qiskit) (1.6.0)\n",
-      "Requirement already satisfied: cython>=0.29 in c:\\users\\diptanshu\\anaconda3\\envs\\tf\\lib\\site-packages (from mthree>=0.17->pennylane_qiskit) (0.29.22)\n",
-      "Requirement already satisfied: orjson>=3.0.0 in c:\\users\\diptanshu\\anaconda3\\envs\\tf\\lib\\site-packages (from mthree>=0.17->pennylane_qiskit) (3.8.8)\n",
-      "Requirement already satisfied: semantic-version>=2.7 in c:\\users\\diptanshu\\anaconda3\\envs\\tf\\lib\\site-packages (from pennylane>=0.28->pennylane_qiskit) (2.10.0)\n",
-      "Requirement already satisfied: appdirs in c:\\users\\diptanshu\\anaconda3\\envs\\tf\\lib\\site-packages (from pennylane>=0.28->pennylane_qiskit) (1.4.4)\n",
-      "Requirement already satisfied: autograd in c:\\users\\diptanshu\\anaconda3\\envs\\tf\\lib\\site-packages (from pennylane>=0.28->pennylane_qiskit) (1.3)\n",
-      "Requirement already satisfied: retworkx in c:\\users\\diptanshu\\anaconda3\\envs\\tf\\lib\\site-packages (from pennylane>=0.28->pennylane_qiskit) (0.8.0)\n",
-      "Requirement already satisfied: toml in c:\\users\\diptanshu\\anaconda3\\envs\\tf\\lib\\site-packages (from pennylane>=0.28->pennylane_qiskit) (0.10.1)\n",
-      "Requirement already satisfied: requests in c:\\users\\diptanshu\\anaconda3\\envs\\tf\\lib\\site-packages (from pennylane>=0.28->pennylane_qiskit) (2.25.1)\n",
-      "Requirement already satisfied: pennylane-lightning>=0.28 in c:\\users\\diptanshu\\anaconda3\\envs\\tf\\lib\\site-packages (from pennylane>=0.28->pennylane_qiskit) (0.29.0)\n",
-      "Requirement already satisfied: autoray>=0.3.1 in c:\\users\\diptanshu\\anaconda3\\envs\\tf\\lib\\site-packages (from pennylane>=0.28->pennylane_qiskit) (0.6.3)\n",
-      "Requirement already satisfied: cachetools in c:\\users\\diptanshu\\anaconda3\\envs\\tf\\lib\\site-packages (from pennylane>=0.28->pennylane_qiskit) (4.2.1)\n",
-      "Requirement already satisfied: qiskit-aer==0.12.0 in c:\\users\\diptanshu\\anaconda3\\envs\\tf\\lib\\site-packages (from qiskit>=0.32->pennylane_qiskit) (0.12.0)\n",
-      "Requirement already satisfied: requests-ntlm<=1.1.0 in c:\\users\\diptanshu\\anaconda3\\envs\\tf\\lib\\site-packages (from qiskit-ibmq-provider>=0.19.2->mthree>=0.17->pennylane_qiskit) (1.1.0)\n",
-      "Requirement already satisfied: websocket-client>=1.5.1 in c:\\users\\diptanshu\\anaconda3\\envs\\tf\\lib\\site-packages (from qiskit-ibmq-provider>=0.19.2->mthree>=0.17->pennylane_qiskit) (1.5.1)\n",
-      "Requirement already satisfied: urllib3>=1.21.1 in c:\\users\\diptanshu\\anaconda3\\envs\\tf\\lib\\site-packages (from qiskit-ibmq-provider>=0.19.2->mthree>=0.17->pennylane_qiskit) (1.26.3)\n",
-      "Requirement already satisfied: python-dateutil>=2.8.0 in c:\\users\\diptanshu\\anaconda3\\envs\\tf\\lib\\site-packages (from qiskit-ibmq-provider>=0.19.2->mthree>=0.17->pennylane_qiskit) (2.8.1)\n",
-      "Requirement already satisfied: websockets>=10.0 in c:\\users\\diptanshu\\anaconda3\\envs\\tf\\lib\\site-packages (from qiskit-ibmq-provider>=0.19.2->mthree>=0.17->pennylane_qiskit) (10.4)\n",
-      "Requirement already satisfied: sympy>=1.3 in c:\\users\\diptanshu\\anaconda3\\envs\\tf\\lib\\site-packages (from qiskit-terra>=0.21->mthree>=0.17->pennylane_qiskit) (1.8)\n",
-      "Requirement already satisfied: ply>=3.10 in c:\\users\\diptanshu\\anaconda3\\envs\\tf\\lib\\site-packages (from qiskit-terra>=0.21->mthree>=0.17->pennylane_qiskit) (3.11)\n",
-      "Requirement already satisfied: stevedore>=3.0.0 in c:\\users\\diptanshu\\anaconda3\\envs\\tf\\lib\\site-packages (from qiskit-terra>=0.21->mthree>=0.17->pennylane_qiskit) (5.0.0)\n",
-      "Requirement already satisfied: dill>=0.3 in c:\\users\\diptanshu\\anaconda3\\envs\\tf\\lib\\site-packages (from qiskit-terra>=0.21->mthree>=0.17->pennylane_qiskit) (0.3.3)\n",
-      "Requirement already satisfied: rustworkx>=0.12.0 in c:\\users\\diptanshu\\anaconda3\\envs\\tf\\lib\\site-packages (from qiskit-terra>=0.21->mthree>=0.17->pennylane_qiskit) (0.12.1)\n",
-      "Requirement already satisfied: six>=1.5 in c:\\users\\diptanshu\\anaconda3\\envs\\tf\\lib\\site-packages (from python-dateutil>=2.8.0->qiskit-ibmq-provider>=0.19.2->mthree>=0.17->pennylane_qiskit) (1.15.0)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\diptanshu\\anaconda3\\envs\\tf\\lib\\site-packages (from requests->pennylane>=0.28->pennylane_qiskit) (2021.10.8)\n",
-      "Requirement already satisfied: idna<3,>=2.5 in c:\\users\\diptanshu\\anaconda3\\envs\\tf\\lib\\site-packages (from requests->pennylane>=0.28->pennylane_qiskit) (2.10)\n",
-      "Requirement already satisfied: chardet<5,>=3.0.2 in c:\\users\\diptanshu\\anaconda3\\envs\\tf\\lib\\site-packages (from requests->pennylane>=0.28->pennylane_qiskit) (3.0.4)\n",
-      "Requirement already satisfied: ntlm-auth>=1.0.2 in c:\\users\\diptanshu\\anaconda3\\envs\\tf\\lib\\site-packages (from requests-ntlm<=1.1.0->qiskit-ibmq-provider>=0.19.2->mthree>=0.17->pennylane_qiskit) (1.5.0)\n",
-      "Requirement already satisfied: cryptography>=1.3 in c:\\users\\diptanshu\\anaconda3\\envs\\tf\\lib\\site-packages (from requests-ntlm<=1.1.0->qiskit-ibmq-provider>=0.19.2->mthree>=0.17->pennylane_qiskit) (2.9.2)\n",
-      "Requirement already satisfied: cffi!=1.11.3,>=1.8 in c:\\users\\diptanshu\\anaconda3\\envs\\tf\\lib\\site-packages (from cryptography>=1.3->requests-ntlm<=1.1.0->qiskit-ibmq-provider>=0.19.2->mthree>=0.17->pennylane_qiskit) (1.14.4)\n",
-      "Requirement already satisfied: pycparser in c:\\users\\diptanshu\\anaconda3\\envs\\tf\\lib\\site-packages (from cffi!=1.11.3,>=1.8->cryptography>=1.3->requests-ntlm<=1.1.0->qiskit-ibmq-provider>=0.19.2->mthree>=0.17->pennylane_qiskit) (2.20)\n",
-      "Requirement already satisfied: pbr!=2.1.0,>=2.0.0 in c:\\users\\diptanshu\\anaconda3\\envs\\tf\\lib\\site-packages (from stevedore>=3.0.0->qiskit-terra>=0.21->mthree>=0.17->pennylane_qiskit) (5.11.1)\n",
-      "Requirement already satisfied: mpmath>=0.19 in c:\\users\\diptanshu\\anaconda3\\envs\\tf\\lib\\site-packages (from sympy>=1.3->qiskit-terra>=0.21->mthree>=0.17->pennylane_qiskit) (1.2.1)\n",
-      "Requirement already satisfied: future>=0.15.2 in c:\\users\\diptanshu\\anaconda3\\envs\\tf\\lib\\site-packages (from autograd->pennylane>=0.28->pennylane_qiskit) (0.18.2)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n",
-      "The type of circ_1 is 'gate_configurations.circuit'>\n",
-      "\n",
-      "After we use the method \"get_quantum_circuit()\", we can obtain the actual circuit, whose type is 'qiskit.circuit.quantumcircuit.QuantumCircuit'>\n",
-      "\n",
-      "0: ──RX(1.82)──RZ(3.72)─╭●───────┤  \n",
-      "1: ──RX(3.19)──RZ(3.62)─╰X─╭●────┤  \n",
-      "2: ──RX(6.07)──RZ(2.87)────╰X─╭●─┤  \n",
-      "3: ──RX(2.19)──RZ(2.91)───────╰X─┤  \n"
-     ]
-    }
-   ],
-   "source": [
-    "%run convert_qiskit_to_pennylane.ipynb"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 34,
-   "id": "driving-greenhouse",
+   "id": "completed-doctor",
    "metadata": {},
    "outputs": [
     {
@@ -161,41 +92,14 @@
     }
    ],
    "source": [
-    "circ_drawer = qml.draw(pennylane_circ)\n",
+    "circ_drawer = qml.draw(qnode)\n",
     "print(circ_drawer())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "id": "driven-remains",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'function' object has no attribute 'func'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-36-48686dad413a>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mn_qubits\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m4\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mmy_weight_shapes\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m{\u001b[0m\u001b[1;34m\"weights\"\u001b[0m\u001b[1;33m:\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mn_layers\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mn_qubits\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m}\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[0mmy_qlayer\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mqml\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mqnn\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mKerasLayer\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpennylane_circ\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmy_weight_shapes\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0moutput_dim\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mn_qubits\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m~\\anaconda3\\envs\\tf\\lib\\site-packages\\pennylane\\qnn\\keras.py\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, qnode, weight_shapes, output_dim, weight_specs, batch_idx, **kwargs)\u001b[0m\n\u001b[0;32m    226\u001b[0m         }\n\u001b[0;32m    227\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 228\u001b[1;33m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_signature_validation\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mqnode\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mweight_shapes\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    229\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    230\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0margnum\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mbatch_idx\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\anaconda3\\envs\\tf\\lib\\site-packages\\pennylane\\qnn\\keras.py\u001b[0m in \u001b[0;36m_signature_validation\u001b[1;34m(self, qnode, weight_shapes)\u001b[0m\n\u001b[0;32m    251\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    252\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m_signature_validation\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mqnode\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mweight_shapes\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 253\u001b[1;33m         \u001b[0msig\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0minspect\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msignature\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mqnode\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfunc\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mparameters\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    254\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    255\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0minput_arg\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;32min\u001b[0m \u001b[0msig\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'function' object has no attribute 'func'"
-     ]
-    }
-   ],
-   "source": [
-    "n_layers = 2\n",
-    "n_qubits = 4\n",
-    "my_weight_shapes = {\"weights\": (n_layers, n_qubits)}\n",
-    "my_qlayer = qml.qnn.KerasLayer(pennylane_circ, my_weight_shapes, output_dim=n_qubits)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 17,
-   "id": "divided-transformation",
+   "id": "competitive-event",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,17 +110,17 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "included-candidate",
+   "id": "occasional-jenny",
    "metadata": {},
    "outputs": [],
    "source": [
-    "qlayer = qml.qnn.KerasLayer(qnode, weight_shapes, output_dim=n_qubits)"
+    "qlayer = qml.qnn.KerasLayer(qnode, weight_shapes, output_dim=4)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "protected-region",
+   "id": "concrete-lafayette",
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +148,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "robust-proceeding",
+   "id": "diagnostic-prompt",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +160,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "above-parish",
+   "id": "naval-decline",
    "metadata": {},
    "outputs": [
     {
@@ -316,7 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "naked-torture",
+   "id": "confidential-tablet",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,7 +231,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "vocational-chair",
+   "id": "complex-seating",
    "metadata": {},
    "outputs": [
     {
@@ -752,7 +656,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "normal-dealer",
+   "id": "vulnerable-potato",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -777,7 +681,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "ordinary-brazil",
+   "id": "after-budget",
    "metadata": {},
    "outputs": [
     {
@@ -1211,7 +1115,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "animal-alexandria",
+   "id": "residential-brick",
    "metadata": {},
    "outputs": [],
    "source": []
