--- a/Quantum_Torch_Model/model_exploration.ipynb
+++ b/Quantum_Torch_Model/model_exploration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -179,6 +179,61 @@
        "      <td>0.453695</td>\n",
        "      <td>0.1</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>model1rep</td>\n",
+       "      <td>models_saved/model1rep__l0.0001bs100ne30.pth</td>\n",
+       "      <td>30</td>\n",
+       "      <td>100</td>\n",
+       "      <td>0.0001</td>\n",
+       "      <td>0.341316</td>\n",
+       "      <td>0.239890</td>\n",
+       "      <td>0.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>model2rep</td>\n",
+       "      <td>models_saved/model2rep__l0.0001bs100ne30.pth</td>\n",
+       "      <td>30</td>\n",
+       "      <td>100</td>\n",
+       "      <td>0.0001</td>\n",
+       "      <td>0.283493</td>\n",
+       "      <td>0.189560</td>\n",
+       "      <td>0.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>model3</td>\n",
+       "      <td>models_saved/model3__l0.0001bs100ne30.pth</td>\n",
+       "      <td>30</td>\n",
+       "      <td>100</td>\n",
+       "      <td>0.0001</td>\n",
+       "      <td>0.181158</td>\n",
+       "      <td>0.971868</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>model4rep</td>\n",
+       "      <td>models_saved/model4rep__l0.0001bs100ne30.pth</td>\n",
+       "      <td>30</td>\n",
+       "      <td>100</td>\n",
+       "      <td>0.0001</td>\n",
+       "      <td>0.188415</td>\n",
+       "      <td>0.969780</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>model1</td>\n",
+       "      <td>models_saved/model1__l0.001bs32ne1.pth</td>\n",
+       "      <td>1</td>\n",
+       "      <td>32</td>\n",
+       "      <td>0.0010</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -196,6 +251,11 @@
        "8   Model_Type_2_BSTests  models_saved/Model_Type_2_BSTests__l0.0001bs10...   \n",
        "9   Model_Type_2_BSTests  models_saved/Model_Type_2_BSTests__l0.0001bs10...   \n",
        "10  Model_Type_2_BSTests  models_saved/Model_Type_2_BSTests__l0.0001bs1n...   \n",
+       "11             model1rep       models_saved/model1rep__l0.0001bs100ne30.pth   \n",
+       "12             model2rep       models_saved/model2rep__l0.0001bs100ne30.pth   \n",
+       "13                model3          models_saved/model3__l0.0001bs100ne30.pth   \n",
+       "14             model4rep       models_saved/model4rep__l0.0001bs100ne30.pth   \n",
+       "15                model1             models_saved/model1__l0.001bs32ne1.pth   \n",
        "\n",
        "    num_epochs  batch_size  learning_rate  average_loss  accuracy  threshold  \n",
        "0            1         100         0.1000      0.274299  1.000000       10.0  \n",
@@ -208,10 +268,15 @@
        "7           30        1000         0.0001      0.197555  0.465300        0.1  \n",
        "8           30          10         0.0001      0.300923  0.451265        0.1  \n",
        "9           30       10000         0.0001      0.364133  0.175900        0.1  \n",
-       "10          30           1         0.0001      0.279514  0.453695        0.1  "
+       "10          30           1         0.0001      0.279514  0.453695        0.1  \n",
+       "11          30         100         0.0001      0.341316  0.239890        0.1  \n",
+       "12          30         100         0.0001      0.283493  0.189560        0.1  \n",
+       "13          30         100         0.0001      0.181158  0.971868        1.0  \n",
+       "14          30         100         0.0001      0.188415  0.969780        1.0  \n",
+       "15           1          32         0.0010           NaN       NaN        NaN  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -244,7 +309,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
